# RustAsyncServer

./: Cargo.toml  README.md  Todo.txt  docker-compose.yaml
.cargo/: config.toml
assets/: dror.txt
examples/: generate_key.rs
sql/dev_init/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
src/: config.rs  ctx.rs  error.rs  log.rs  main.rs  model.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/crypt/: error.rs  mod.rs  pwd.rs  token.rs
src/model/: base.rs  error.rs  mod.rs  task.rs  user.rs
src/model/store/: error.rs  mod.rs
src/utils/: error.rs  mod.rs
src/web/: error.rs  log.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_hello.rs  routes_login.rs  routes_tickets.rs
src/web/rpc/: mod.rs  params.rs  task_rpc.rs
