[package]
name = "learning_axum_server"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
axum = { version = "0.8", features=["macros"]}
reqwest = "0.12.15"
tower-http = { version = "0.6.2", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
tower = "0.5.2"
serde = { version = "1.0.219", features = ["derive"] } 
serde_json = "1.0.140"
tower-cookies = "0.11.0"
lazy-regex = "3.4.1"
 
